--- a/BasicSkeleton/test-output/old/Suite/methods-alphabetical.html
+++ b/BasicSkeleton/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@4b0d79fc]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1200043120</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@55634720]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1904787136</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@55634720]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1904787136</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@4b0d79fc]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1200043120</td>   <td></td> </tr>
-<tr bgcolor="97aea5">  <td>20/11/30 19:51:28</td>   <td>27389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass@55634720]">one_W3SchoolsestMethod1</td> 
-  <td>TestNG-test=Test-1@1904787136</td>   <td></td> </tr>
-<tr bgcolor="97aea5">  <td>20/11/30 19:51:25</td>   <td>24676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass@55634720]">one_W3SchoolsestMethod2</td> 
-  <td>TestNG-test=Test-2@1586329546</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>20/11/30 19:51:27</td>   <td>26680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass2@4b0d79fc]">two_W3SchoolsestMethod1</td> 
-  <td>TestNG-test=Test-3@1200043120</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>20/11/30 19:51:19</td>   <td>18723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass2@4b0d79fc]">two_W3SchoolsestMethod2</td> 
-  <td>TestNG-test=Test-4@2019271609</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:00:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@d9345cd]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@2059015450</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:00:51</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@428640fa]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@707473634</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:00:51</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@d9345cd]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@2059015450</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:00:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@428640fa]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@707473634</td>   <td></td> </tr>
+<tr bgcolor="97aea5">  <td>20/11/30 20:01:19</td>   <td>27557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass@428640fa]">one_W3SchoolsestMethod1</td> 
+  <td>TestNG-test=Test-1@707473634</td>   <td></td> </tr>
+<tr bgcolor="97aea5">  <td>20/11/30 20:01:21</td>   <td>29445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass@428640fa]">one_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-2@190294201</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:01:29</td>   <td>37556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@d9345cd]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@105035962</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:01:31</td>   <td>39795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@428640fa]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@190294201</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:01:33</td>   <td>41506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@d9345cd]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@105035962</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 20:01:36</td>   <td>44254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@428640fa]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@190294201</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>20/11/30 20:01:09</td>   <td>17642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass2@d9345cd]">two_W3SchoolsestMethod1</td> 
+  <td>TestNG-test=Test-3@2059015450</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>20/11/30 20:01:23</td>   <td>32102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass2@d9345cd]">two_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-4@105035962</td>   <td></td> </tr>
 </table>
