--- a/BasicSkeleton/test-output/old/Suite/methods.html
+++ b/BasicSkeleton/test-output/old/Suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:24:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@29215f06]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1085549836</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:24:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@29215f06]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1085549836</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:24:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@59505b48]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-4@1014774006</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:24:21</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@59505b48]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-4@1014774006</td>   <td></td> </tr>
-<tr bgcolor="9a988c">  <td>20/12/01 07:25:07</td>   <td>45597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass2@59505b48]">two_W3SchoolsestMethod1</td> 
-  <td>TestNG-test=Test-3@1567579256</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>20/12/01 07:25:10</td>   <td>49539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass@29215f06]">one_W3SchoolsestMethod2</td> 
-  <td>TestNG-test=Test-2@890972436</td>   <td></td> </tr>
-<tr bgcolor="9a988c">  <td>20/12/01 07:25:14</td>   <td>52614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass2@59505b48]">two_W3SchoolsestMethod2</td> 
-  <td>TestNG-test=Test-4@1014774006</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>20/12/01 07:25:14</td>   <td>52955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass@29215f06]">one_W3SchoolsestMethod1</td> 
-  <td>TestNG-test=Test-1@1085549836</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:25:20</td>   <td>58594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@59505b48]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-4@1014774006</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:25:25</td>   <td>64401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@29215f06]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@890972436</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:25:31</td>   <td>69706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@59505b48]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-4@1014774006</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/01 07:25:32</td>   <td>71268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@29215f06]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@890972436</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@d9345cd]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@784099962</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@428640fa]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@428640fa]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@d9345cd]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@784099962</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>20/12/02 13:16:33</td>   <td>51639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass2@d9345cd]">two_W3SchoolsestMethod1</td> 
+  <td>TestNG-test=Test-3@286110205</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>20/12/02 13:16:59</td>   <td>77598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass2@d9345cd]">two_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-4@784099962</td>   <td></td> </tr>
+<tr bgcolor="97aea5">  <td>20/12/02 13:16:59</td>   <td>77932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass@428640fa]">one_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
+<tr bgcolor="97aea5">  <td>20/12/02 13:17:01</td>   <td>79861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass@428640fa]">one_W3SchoolsestMethod1</td> 
+  <td>TestNG-test=Test-1@240537243</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:17:16</td>   <td>94831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@428640fa]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:17:17</td>   <td>96298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@d9345cd]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@286110205</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:17:25</td>   <td>103913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@d9345cd]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@286110205</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/12/02 13:17:25</td>   <td>104210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@428640fa]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
 </table>
