--- a/BasicSkeleton/test-output/old/Suite/methods.html
+++ b/BasicSkeleton/test-output/old/Suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@d9345cd]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-4@784099962</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@428640fa]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@428640fa]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:15:41</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@d9345cd]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-4@784099962</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>20/12/02 13:16:33</td>   <td>51639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass2@d9345cd]">two_W3SchoolsestMethod1</td> 
-  <td>TestNG-test=Test-3@286110205</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>20/12/02 13:16:59</td>   <td>77598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass2@d9345cd]">two_W3SchoolsestMethod2</td> 
-  <td>TestNG-test=Test-4@784099962</td>   <td></td> </tr>
-<tr bgcolor="97aea5">  <td>20/12/02 13:16:59</td>   <td>77932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass@428640fa]">one_W3SchoolsestMethod2</td> 
-  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
-<tr bgcolor="97aea5">  <td>20/12/02 13:17:01</td>   <td>79861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass@428640fa]">one_W3SchoolsestMethod1</td> 
-  <td>TestNG-test=Test-1@240537243</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:17:16</td>   <td>94831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@428640fa]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:17:17</td>   <td>96298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@d9345cd]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@286110205</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:17:25</td>   <td>103913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@d9345cd]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@286110205</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/12/02 13:17:25</td>   <td>104210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@428640fa]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@105035962</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:49:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@6f45df59]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1478197064</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:49:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@58ea606c]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1008034869</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:49:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@6f45df59]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1478197064</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:49:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@58ea606c]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1008034869</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>20/12/22 21:49:56</td>   <td>19525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass2@6f45df59]">two_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-4@43376831</td>   <td></td> </tr>
+<tr bgcolor="6fadc7">  <td>20/12/22 21:49:57</td>   <td>20896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass@58ea606c]">one_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-2@2077115211</td>   <td></td> </tr>
+<tr bgcolor="6fadc7">  <td>20/12/22 21:49:58</td>   <td>21974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass@58ea606c]">one_W3SchoolsestMethod1</td> 
+  <td>TestNG-test=Test-1@1008034869</td>   <td></td> </tr>
+<tr bgcolor="f4937d">  <td>20/12/22 21:49:59</td>   <td>23318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass2@6f45df59]">two_W3SchoolsestMethod1</td> 
+  <td>TestNG-test=Test-3@1478197064</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:50:01</td>   <td>25277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@6f45df59]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1478197064</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:50:07</td>   <td>30837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass2@6f45df59]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1478197064</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:50:12</td>   <td>36344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@58ea606c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@2077115211</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>20/12/22 21:50:13</td>   <td>36617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.teardown()[pri:0, instance:tests.SampleClass@58ea606c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@2077115211</td>   <td></td> </tr>
 </table>
